--- a/.hassio-addons.yml
+++ b/.hassio-addons.yml
@@ -85,6 +85,10 @@ addons:
     repository: hassio-addons/addon-motioneye
     target: motioneye
     image: hassioaddons/motioneye
+  mopidy:
+    repository: hassio-addons/addon-mopidy
+    target: mopidy
+    image: hassioaddons/mopidy  
   mqtt:
     repository: hassio-addons/addon-mqtt
     target: mqtt
